applications/workspaces/overlays/istio/network-policies/workspaces-frontend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: workspaces-frontend
  namespace: kubeflow-workspaces
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: workspaces-frontend
  ingress:
    - from:
        - namespaceSelector:
            matchExpressions:
              - key: kubernetes.io/metadata.name
                operator: In
                values:
                  - istio-system
        - podSelector: {}
  policyTypes:
    - Ingress
